# sobel-harness-instructional

./: CMakeLists.txt  README.md  sobel_cpu.cpp  sobel_cpu_omp_offload.cpp  sobel_gpu.cu
data/: README.md
scripts/: heatmap_plot_hw5.py  imshow.py  modules_for_cgpu.sh  run-cp5-cuda-configs-gpu-perlmutter.sh  skeleton-gpu-batch-script.sh  zebra-convert.py
